# final2

./: README.MD  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
calorie/: forms.py  models.py  views.py
calorie/migrations/: 0001_initial.py  0002_profile.py  0003_dailyactivity.py
calorie/static/css/: custom.css  picocustom.css
calorie/static/pico-1.5.10/scss/: _variables.scss
calorie/templates/: count.html  dashboard.html  home.html  login.html  measure.html  profile.html
final/: settings.py  urls.py  wsgi.py
