[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
dev='manage:main'

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
